=========================================================
xx.xx.2008   1.00 RC-1
=========================================================
- Revamped Main Index page

- Added: developers, testers, translators for About page
- Added: option to have linked terms if imGlossary is installed
- Added: captcha to submit form
- Added: RSS feed using icmsfeed.php
- Added: GPL2 license incl. unofficial translations

- Renamed: module name from 'WF-Links' into 'imLinks'
- Renamed: file 'bugfixlist.txt' into 'changelog.txt'

- Fixed: block settings [skenow]


=========================================================
18.10.2008   1.06 Final
=========================================================
- Added Newbbex to list of forums
- User gets redirected back to link after voting
- Street2 can be used for all known addresses
- Extended list of address formats (include/address.php)
- Search result are sorted by title ascending
- Categories in Popular an Top Rated are sorted by setting in Preferences
- Removed justification from description
- Set Quick View option of by default

- Fixed bug: alternative cats were not deleted
- Fixed bug: blank page with Cancel button ratingpage
- Fixed bug: printing of screenshot when Display Screenshot is set to No

- Changed: references to class/xoopsmodule.php to kernel/module.php [vaughan]

- Updated the online documentation
  - dutch [mcdonald]
  - english [mcdonald]
  - portuguese-brazilian [gibaphp]

- Removed file ../templates/wflinks_linkloadsimple.html
- Removed file ../docs/english/readme1st.txt


=========================================================
18.08.2008   1.06 RC-2
=========================================================
- Added noindex,nofollow meta-tag to broken- and rating pages
- Added option to Index Page to show Latest Links [trabis & mcdonald]

- Converted dutch & english language files into UTF-8

- Fixed rating page, removed closing div-tag
- Fixed mimetype setting for Forum icon